--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
     <div class="container">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
-                <h2 class="h2-style">Resume</h2>
+                <h2 class="h2-style">Curriculum vit&aelig;</h2>
                 <div class="row">
                     <div class="col-md-7">
                         <h3 class="h3-style">Education</h3>
@@ -37,27 +37,46 @@ layout: default
                             <li>
                                 <div class="row">
                                     <div class="col-sm-4">
-                                        <p class="title-style sm-text-center">Fantastic University</p>
-                                        <p class="tag sm-text-center">1997 - 1999</p>
+                                        <p class="title-style sm-text-center">University of Amsterdam</p>
+                                        <p class="tag sm-text-center">2009 - 2010</p>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p class="title-style">Master of Engineering in Computer Engineering</p>    
-                                        <p>Thesis: Nulla, Omnis Vitae Illum Molestiae Rem
-                                            <br>GPA: 4.0
-                                        </p>
+                                        <p class="title-style">Master of Science in Contemporary Asian Studies</p>    
                                     </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="row">
                                     <div class="col-sm-4">
-                                        <p class="title-style sm-text-center">Incredible University</p>
-                                        <p class="tag sm-text-center">1993 - 1997</p>
+                                        <p class="title-style sm-text-center">University of Bath</p>
+                                        <p class="tag sm-text-center">2007 - 2008</p>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p class="title-style">Bachelor of Engineering in Computer Science</p>
-                                        <p>First-class honors
-                                            <br>GPA: 4.33
+                                        <p class="title-style">Master of Science in Science, Culture & Communication</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <p class="title-style sm-text-center">Xinjiang Arts Institute</p>
+                                        <p class="tag sm-text-center">2006 - 2007</p>
+                                    </div>
+                                    <div class="col-sm-8">
+                                        <p class="title-style">Diploma in Uyghur Studies</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <p class="title-style sm-text-center">University of Westminster</p>
+                                        <p class="tag sm-text-center">2001 - 2004</p>
+                                    </div>
+                                    <div class="col-sm-8">
+                                        <p class="title-style">Bachelor of Science with Honours in Artificial Intelligence</p>
+                                        <p>First-class honours
+                                            <br>I was ararded the <strong>Robert Mitchell Medal</strong> for best educational record in any discipline.
                                         </p>
                                     </div>
                                 </div>
@@ -199,23 +218,11 @@ layout: default
                                 </dl>
                             </li>
                         </ul>
-                        <h3 class="h3-style">Honors and Awards</h3>
+                        <h3 class="h3-style">Honours and Awards</h3>
                         <ul class="item-list list-half-margin-bottom">
                             <li>
-                                <p><span class="title-style">Best Design Award</span>
-                                    <br>Web Design Competition 2013</p>
-                            </li>
-                            <li>
-                                <p><span class="title-style">2013 Outstanding Student</span>
-                                    <br>Fantastic University</p>
-                            </li>
-                            <li>
-                                <p><span class="title-style">University Scholarship</span>
-                                    <br>Incredible University</p>
-                            </li>
-                            <li>
-                                <p><span class="title-style">First Prize</span>
-                                    <br>Swimming Competition</p>
+                                <p><span class="title-style">Robbert Mitchell Medal</span>
+                                    <br>University of Westminster</p>
                             </li>
                         </ul>
                     </div>
