--- a/index.html
+++ b/index.html
@@ -246,69 +246,24 @@ layout: default
                         <h3 class="h3-style">Get in Touch</h3>
                         <table class="contact-info-table">
                             <tr>
-                                <td><i class="fa fa-map-marker"></i></td>
-                                <td>999 Nathan Road, Mong Kok, Hong Kong</td>        
-                            </tr>
-                            <tr>
                                 <td><i class="fa fa-mobile-phone"></i></td>
-                                <td>123-456-789</td>        
+                                <td>+86 159 0102 7274</td>        
                             </tr>
                             <tr>
                                 <td><i class="fa fa-envelope-o"></i></td>
-                                <td><a href="#">info@john-doe.com</a></td>        
+                                <td><a href="#">mail@marceloomens.com</a></td>        
                             </tr>
                             <tr>
                                 <td><i class="fa fa-laptop"></i></td>
-                                <td><a href="#">www.john-doe.com</a></td>        
+                                <td><a href="#">www.marceloomens.com</a></td>        
                             </tr>
                         </table>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-7">
-                        <h3 class="h3-style">Drop Me a Line</h3>
-                        <form class="form-horizontal text-center" role="form" method="post" action="php/contact.php" name="contact-form" id="contact-form">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="contact-form-name" name="contact-form-name" placeholder="Name" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="contact-form-email" name="contact-form-email" placeholder="Email" required>
-                            </div>
-
-                            <div class="form-group">
-                                <textarea class="form-control" id="contact-form-message" name="contact-form-message" rows="7" placeholder="Message" required></textarea>
-                            </div>
-
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-default btn-lg uppercase title-font" id="contact-form-submit-btn">Send</button>
-                            </div>
-                        </form>
-                        <div id="message"></div>
-                    </div>
-                    <div class="col-md-4 col-md-offset-1">
                         <h3 class="h3-style">Get Social</h3>
                         <ul class="social list-inline">
-                            <li><a href="#" class="facebook" data-hover="&#xf09a;"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#" class="twitter" data-hover="&#xf099;"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#" class="linkedin" data-hover="&#xf0e1;"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="#" class="google-plus" data-hover="&#xf0d5;"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="#" class="dribbble" data-hover="&#xf17d;"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="#" class="pinterest" data-hover="&#xf0d2;"><i class="fa fa-pinterest"></i></a></li>
-                            <li><a href="#" class="flickr" data-hover="&#xf16e;"><i class="fa fa-flickr"></i></a></li>
-                            <li><a href="#" class="weibo" data-hover="&#xf18a;"><i class="fa fa-weibo"></i></a></li>
-                            <li><a href="#" class="github" data-hover="&#xf09b;"><i class="fa fa-github"></i></a></li>
-                            <li><a href="#" class="instagram" data-hover="&#xf16d;"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="#" class="weixin" data-hover="&#xf18a;"><i class="fa fa-weixin"></i></a></li>
                             <li><a href="#" class="stack-overflow" data-hover="&#xf16c;"><i class="fa fa-stack-overflow"></i></a></li>
-                            <li><a href="#" class="tumblr" data-hover="&#xf173;"><i class="fa fa-tumblr"></i></a></li>
-                            <li><a href="#" class="skype" data-hover="&#xf17e;"><i class="fa fa-skype"></i></a></li>
-                            <li><a href="#" class="vimeo-square" data-hover="&#xf194;"><i class="fa fa-vimeo-square"></i></a></li>
-                            <li><a href="#" class="xing" data-hover="&#xf168;"><i class="fa fa-xing"></i></a></li>
-                            <li><a href="#" class="dropbox" data-hover="&#xf16b;"><i class="fa fa-dropbox"></i></a></li>
-                            <li><a href="#" class="rss" data-hover="&#xf09e;"><i class="fa fa-rss"></i></a></li>
-                            <li><a href="#" class="foursquare" data-hover="&#xf180;"><i class="fa fa-foursquare"></i></a></li>
-                            <li><a href="#" class="vk" data-hover="&#xf189;"><i class="fa fa-vk"></i></a></li>
-                            <li><a href="#" class="renren" data-hover="&#xf18b;"><i class="fa fa-renren"></i></a></li>
-                            <li><a href="#" class="youtube" data-hover="&#xf167;"><i class="fa fa-youtube"></i></a></li>
+                            <li><a href="#" class="github" data-hover="&#xf09b;"><i class="fa fa-github"></i></a></li>
                         </ul>
                     </div>
                 </div>
