--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ layout: default
                         <h3 class="h3-style">Get Social</h3>
                         <ul class="social list-inline">
                             <li><a href="#" class="linkedin" data-hover="&#xf0e1;"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="#" class="weixin" data-hover="&#xf18a;"><i class="fa fa-weixin"></i></a></li>
+                            <li><a href="#" class="weixin" data-hover="&#xf1d7;"><i class="fa fa-weixin"></i></a></li>
                             <li><a href="#" class="stack-overflow" data-hover="&#xf16c;"><i class="fa fa-stack-overflow"></i></a></li>
                             <li><a href="#" class="github" data-hover="&#xf09b;"><i class="fa fa-github"></i></a></li>
                         </ul>
