--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<section id="about"><!-- Beginning of the about section -->
+<section id="about">
     <div class="container">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
@@ -9,7 +9,7 @@ layout: default
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="photo text-center">
-                            <img src="images/placeholder/300x300.gif" alt="" class="img-thumbnail">
+                            <img src="{{ site.avatar }}" alt="{{ site.title }}" class="img-thumbnail">
                         </div>
                     </div>
                     <div class="col-sm-8">
@@ -23,9 +23,9 @@ layout: default
             </div>
         </div>
     </div>
-</section><!-- End of the about section -->
+</section>
 
-<section id="resume"><!-- Beginning of the resume section -->
+<section id="resume">
     <div class="container">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
@@ -87,23 +87,23 @@ layout: default
                             <li>
                                 <div class="row">
                                     <div class="col-sm-4">
-                                        <p class="title-style sm-text-center">Self-Employed</p>
-                                        <p class="tag sm-text-center">Feb 2010 - Now</p>
+                                        <p class="title-style sm-text-center">CroMiDo</p>
+                                        <p class="tag sm-text-center">Apr. 2012- Now</p>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p class="title-style">Web Designer & Developer</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, velit voluptatem nobis fugit facilis voluptatum aspernatur quae eos. Nobis perferendis vero molestias qui. Nesciunt reiciendis iste explicabo debitis illo. Nemo!</p>
+                                        <p class="title-style">Chief Technology Officer</p>
+                                        <p>CroMiDo is a lean start-up that aims to disrupt the charity industry through technological innovation. We enable donors to transfer small amounts of money transparently and instantaneously to people in need anywhere in the world. <a href="http://www.cromido.org" title="CroMiDo Association" target="_blank">Find out more&nbsp;&rarr;</a></p>
                                     </div>
                                 </div>
                             </li>
                             <li>
                                 <div class="row">
                                     <div class="col-sm-4">
-                                        <p class="title-style sm-text-center">Amazing Design</p>
-                                        <p class="tag sm-text-center">Aug 2007 - Jan 2010</p>
+                                        <p class="title-style sm-text-center">Dutch Embassy</p>
+                                        <p class="tag sm-text-center">Aug. 2010 - Now</p>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p class="title-style">UI / UX Designer</p>
+                                        <p class="title-style">Digital Communucations Officer</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, distinctio rerum id dolores excepturi odio earum adipisci ullam quasi amet obcaecati nam repellendus vero rem magni molestiae veniam quae beatae.</p>
                                     </div>
                                 </div>
@@ -111,112 +111,78 @@ layout: default
                             <li>
                                 <div class="row">
                                     <div class="col-sm-4">
-                                        <p class="title-style sm-text-center">AudioJungle</p>
-                                        <p class="tag sm-text-center">2005 - 2007</p>
+                                        <p class="title-style sm-text-center">Radio Zamaneh</p>
+                                        <p class="tag sm-text-center">2009 - 2010</p>
                                     </div>
                                     <div class="col-sm-8">
-                                        <p class="title-style">Front-End Web Developer</p>
+                                        <p class="title-style">Multimedia Specialist</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, maiores, deserunt, autem cupiditate excepturi ea culpa a tempore quo quia cum optio neque quis consequatur quod perspiciatis id nam consequuntur.</p>
                                     </div>
                                 </div>
                             </li>
-                            <li>
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        <p class="title-style sm-text-center">VideoHive</p>
-                                        <p class="tag sm-text-center">2003 - 2005</p>
-                                    </div>
-                                    <div class="col-sm-8">
-                                        <p class="title-style">Back-End Web Developer</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, dignissimos ea repellendus aut nemo id placeat voluptate commodi explicabo perspiciatis. Minus molestiae quisquam eos cumque quae earum rerum eaque beatae!</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="row">
-                                    <div class="col-sm-4">
-                                        <p class="title-style sm-text-center">PhotoDune</p>
-                                        <p class="tag sm-text-center">2001 - 2003</p>
-                                    </div>
-                                    <div class="col-sm-8">
-                                        <p class="title-style">Java Programmer</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, eos, illo, et quia neque laborum molestias distinctio adipisci magnam officia ratione consequuntur commodi iure asperiores aperiam a quo fuga natus.</p>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
                     </div>
                     <div class="col-md-4 col-md-offset-1">
                         <h3 class="h3-style">Skills</h3>
                         <ul class="item-list">
                             <li>
-                                <p>I am familiar with <strong>HTML5</strong>, <strong>CSS3</strong>, <strong>JavaScript</strong> and <strong>PHP</strong>.</p>
-                                <!-- The "id" attribute inside the following "dl" tag is required in order for the chart to work properly. -->
-                                <dl id="codingSkills" class="chart bar-chart">
-                                    <dt>CSS3</dt>
-                                    <dd>98</dd>
-                                    <dt>HTML5</dt>
-                                    <dd>95</dd>
-                                    <dt>JavaScript</dt>
-                                    <dd>90</dd>
-                                    <dt>PHP</dt>
-                                    <dd>85</dd>
-                                </dl>
-                            </li>
-                            <li>
-                                <p>I am familiar with <strong>Photoshop</strong>, <strong>Illustrator</strong>, <strong>InDesign</strong>, <strong>After Effects</strong>, <strong>Premier</strong> and <strong>Edge</strong>.</p>
-                                <!-- The "id" attribute inside the following "dl" tag is required in order for the chart to work properly. -->
-                                <dl id="softwareSkills" class="chart donut-chart" data-show-percentage="false">
-                                    <dt data-color="#FFA07A">Photoshop</dt>
-                                    <dd>32</dd>
-                                    <dt data-color="#FF6D70">Illustrator</dt>
+                                <p>I have a strong preference for <strong>declarative programming</strong> (functional, logic programming etc.) but I'm also very familiar with <strong>object-oriented design</strong>.</p>
+                                <dl id="softwareSkills" class="chart donut-chart" data-arc-inner-radius-percent="50" data-arc-outer-radius-percent="100" data-show-percentage="false">
+                                    <dt data-color="#FF6D70">Functional</dt>
                                     <dd>35</dd>
-                                    <dt data-color="#FFC16D">InDesign</dt>
-                                    <dd>15</dd>
-                                    <dt data-color="#E87663">After Effects</dt>
+                                    <dt data-color="#E89D63">Logic</dt>
+                                    <dd>30</dd>
+                                    <dt data-color="#FFC16D">Object-oriented</dt>
+                                    <dd>30</dd>
+                                    <dt data-color="#7F6B63">Imperative</dt>
                                     <dd>5</dd>
-                                    <dt data-color="#E89D63">Premier</dt>
-                                    <dd>6</dd>
-                                    <dt data-color="#7F6B63">Edge</dt>
-                                    <dd>7</dd>
                                 </dl>
                             </li>
                             <li>
-                                <p>I am a native speaker of <strong>Lipsum</strong>. Furthermore, I can speak a little bit of <strong>Aliquip</strong>, <strong>Eiusmod</strong>, <strong>Consquat</strong>, <strong>Voluptate</strong> and <strong>Excepteur</strong>.</p>
-                                <!-- The "id" attribute inside the following "dl" tag is required in order for the chart to work properly. -->
-                                <dl id="langSkills" class="chart progress-chart" data-symbol-font-awesome-class="fa-stop">
-                                    <dt>Lipsum</dt>
-                                    <dd>11</dd>
-                                    <dt>Aliquip</dt>
+                                <dl id="codingSkills" class="chart progress-chart" data-symbol-font-awesome-class="fa-stop">
+                                    <dt>Python</dt>
                                     <dd>10</dd>
-                                    <dt>Eiusmod</dt>
+                                    <dt>JavaScript</dt>
+                                    <dd>9</dd>
+                                    <dt>Prolog</dt>
+                                    <dd>9</dd>
+                                    <dt>Java/C++</dt>
                                     <dd>8</dd>
-                                    <dt>Consquat</dt>
+                                    <dt>Matlab</dt>
                                     <dd>6</dd>
-                                    <dt>Voluptate</dt>
-                                    <dd>4</dd>
-                                    <dt>Excepteur</dt>
-                                    <dd>2</dd>
                                 </dl>
                             </li>
                             <li>
-                                <p>I have a well-rounded skill set in UI / UX design.</p>
-                                <!-- The "id" attribute inside the following "dl" tag is required in order for the chart to work properly. -->
+                                <p>I'd like to get more exposure to <strong>Haskell</strong>, <strong>Clojure</strong>, <strong>miniKanren</strong> and <strong>Elm</strong>.</p>
+                            </li>
+                            <li>
+                                <p>I have a well-rounded DevOps skill.</p>
                                 <dl id="designSkills" class="chart donut-chart" data-arc-inner-radius-percent="50" data-arc-outer-radius-percent="100" data-show-percentage="false">
-                                    <dt data-color="#AA71AE">Wireframing</dt>
-                                    <dd>32</dd>
-                                    <dt data-color="#E17C88">Prototyping</dt>
-                                    <dd>35</dd>
-                                    <dt data-color="#B4B8A6">Persona</dt>
+                                    <dt data-color="#AA71AE">Web frameworks</dt>
+                                    <dd>25</dd>
+                                    <dt data-color="#E17C88">Front-end HTML/CSS</dt>
                                     <dd>15</dd>
-                                    <dt data-color="#5F3661">Storyboarding</dt>
-                                    <dd>5</dd>
-                                    <dt data-color="#E1DD7C">Sketching</dt>
-                                    <dd>6</dd>
-                                    <dt data-color="#BB7079">User Interviews</dt>
+                                    <dt data-color="#B4B8A6">API server/consumer</dt>
+                                    <dd>15</dd>
+                                    <dt data-color="#5F3661">Algorithm design</dt>
+                                    <dd>20</dd>                                    
+                                    <dt data-color="#E1DD7C">Big data & analytics</dt>
+                                    <dd>15</dd>
+                                    <dt data-color="#BB7079">System administration</dt>
+                                    <dd>10</dd>
+                                </dl>
+                                <p>&nbsp;</p>
+                                <p>I have experience with <strong>Django</strong>, <strong>Flask</strong> and <strong>AngularJS</strong>.</p>
+                            </li>
+                            <li>
+                                <p>The programmer I am.</p>
+                                <dl id="codingSkills" class="chart progress-chart" data-symbol-font-awesome-class="fa-stop">
+                                    <dt>Prototyping</dt>
+                                    <dd>10</dd>
+                                    <dt>DRY</dt>
+                                    <dd>9</dd>
+                                    <dt>Iterative</dt>
                                     <dd>7</dd>
                                 </dl>
-                            </li>
                         </ul>
                         <h3 class="h3-style">Honours and Awards</h3>
                         <ul class="item-list list-half-margin-bottom">
@@ -225,14 +191,34 @@ layout: default
                                     <br>University of Westminster</p>
                             </li>
                         </ul>
+                        <h3 class="h3-style">Languages</h3>
+                        <ul class="item-list">
+                            <li>
+                                <p>I am a native speaker of <strong>Dutch</strong> and I'm fluent in <strong>English</strong>. I also speak <strong>Chinese</strong>, <strong>German</strong> and <strong>Uyghur</strong>.</p>
+                                <dl id="langSkills" class="chart progress-chart" data-symbol-font-awesome-class="fa-stop">
+                                    <dt>English</dt>
+                                    <dd>10</dd>
+                                    <dt>Dutch</dt>
+                                    <dd>10</dd>
+                                    <dt>Chinese</dt>
+                                    <dd>8</dd>
+                                    <dt>German</dt>
+                                    <dd>7</dd>
+                                    <dt>Uyghur</dt>
+                                    <dd>4</dd>
+                                </dl>
+                            </li>
+                        </ul>
+                        <h3 class="h3-style">Interests</h3>
+                        <p>New technologies, data science, languages, books & reading, current affairs, international development, history of science, philosophy, travel, long-distance running.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</section><!-- End of the resume section -->
+</section>
 
-<section id="contact"><!-- Beginning of the contact section -->
+<section id="contact">
     <div class="container">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
@@ -246,28 +232,28 @@ layout: default
                         <h3 class="h3-style">Get in Touch</h3>
                         <table class="contact-info-table">
                             <tr>
-                                <td><i class="fa fa-mobile-phone"></i></td>
-                                <td>+86 159 0102 7274</td>        
+                                <td><i class="fa fa-laptop"></i></td>
+                                <td>www.marceloomens.com</td>        
                             </tr>
                             <tr>
                                 <td><i class="fa fa-envelope-o"></i></td>
-                                <td><a href="#">mail@marceloomens.com</a></td>        
+                                <td><a href="mailto:{{ site.email }}">mail@marceloomens.com</a></td>        
                             </tr>
                             <tr>
-                                <td><i class="fa fa-laptop"></i></td>
-                                <td><a href="#">www.marceloomens.com</a></td>        
+                                <td><i class="fa fa-mobile-phone"></i></td>
+                                <td>+86 159 0102 7274</td>        
                             </tr>
                         </table>
                         <h3 class="h3-style">Get Social</h3>
                         <ul class="social list-inline">
-                            <li><a href="#" class="linkedin" data-hover="&#xf0e1;"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="#" class="weixin" data-hover="&#xf1d7;"><i class="fa fa-weixin"></i></a></li>
-                            <li><a href="#" class="stack-overflow" data-hover="&#xf16c;"><i class="fa fa-stack-overflow"></i></a></li>
-                            <li><a href="#" class="github" data-hover="&#xf09b;"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://cn.linkedin.com/in/marceloomens/" class="linkedin" data-hover="&#xf0e1;" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="http://weixin.qq.com/r/vl7P193EWYAmrZm09wus" class="weixin" data-hover="&#xf1d7;" target="_blank"><i class="fa fa-weixin"></i></a></li>
+                            <li><a href="http://stackoverflow.com/users/1931235/marcel-oomens" class="stack-overflow" data-hover="&#xf16c;" target="_blank"><i class="fa fa-stack-overflow"></i></a></li>
+                            <li><a href="https://www.github.com/marceloomens/" class="github" data-hover="&#xf09b;" target="_blank"><i class="fa fa-github"></i></a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</section><!-- End of the contact section -->
+</section>
