--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@ layout: default
                                     <dt data-color="#BB7079">System administration</dt>
                                     <dd>10</dd>
                                 </dl>
-                                <p>&nbsp;</p>
-                                <p>I have experience with <strong>Django</strong>, <strong>Flask</strong> and <strong>AngularJS</strong>.</p>
+                            </li>
+                            <li>
+                                <p>My toolkit includes <strong>Django</strong>, <strong>Flask</strong> and <strong>AngularJS</strong>.</p>
                             </li>
                             <li>
                                 <p>The programmer I am.</p>
